--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "homepage": "https://github.com/danny-avila/glossary-app#readme",
   "dependencies": {
+    "axios": "^1.3.3",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.2",
     "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-textarea-autosize": "^8.4.0",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
